--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "express-docker-starter",
   "version": "1.0.0",
   "scripts": {
-    "dev": "node src/server.js",
+    "dev": "nodemon --exec babel-node src/server.js",
     "build": "next build",
     "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/node": "7.12.13",
     "babel-plugin-import": "1.7.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "4.17.*",
+    "mongoose": "5.11.15",
+    "nodemon": "2.0.7",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   },
   "devDependencies": {
-    "babel-eslint": "10.0.3",
-    "cross-env": "5.2.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-plugin-import": "2.20.0",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "2.3.0"
+    "@babel/preset-env": "^7.12.13",
+    "cross-env": "5.2.0"
   },
   "license": "ISC"
 }
